<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:layout_margin="@dimen/margem">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            tools:ignore="TextViewEdits" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tel"
            android:textSize="16sp"
            android:inputType="phone"
            tools:ignore="TextViewEdits" />

        <EditText
            android:id="@+id/edtTelefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margem"
            android:layout_marginBottom="@dimen/margem">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/whats"
                android:textSize="16sp" />

            <Switch
                android:id="@+id/swtWhats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                tools:ignore="UseSwitchCompatOrMaterialXml" />


        </LinearLayout>


        <RadioGroup
            android:id="@+id/rdgSexo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtSexo"
            android:layout_gravity="right"
            android:text="@string/sexo"/>


            <RadioButton
            android:id="@+id/rdbMasculino"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/masculino" />

        <RadioButton
            android:id="@+id/rdbFeminino"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/feminino" />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/periodo"
            android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/rdgPeriodo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rdbManha"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/manha" />

                <RadioButton
                    android:id="@+id/rdbTarde"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/tarde" />

                <RadioButton
                    android:id="@+id/rdbNoite"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/noite" />

            </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pref"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <CheckBox
            android:id="@+id/chkInternet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/internet"/>

        <CheckBox
            android:id="@+id/chkTelefone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tel"/>

        <CheckBox
            android:id="@+id/chkTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv"/>

        <CheckBox
            android:id="@+id/chkStreaming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/streaming"/>
        </LinearLayout>

        <Switch
            android:id="@+id/swtNotificacao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/notificacao"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancelar"
                android:layout_margin="@dimen/margem"/>

            <Button
                android:id="@+id/btnOk"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ok"
                android:layout_margin="@dimen/margem"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>